# generated_drivers

./: README.md
amplitude/: .env.example  .gitignore  README.md  __init__.py  client.py  exceptions.py  pyproject.toml  requirements.txt  setup.py
amplitude/examples/: 1_basic_usage.py  2_error_handling.py  3_batch_operations.py  4_user_properties.py  5_advanced_usage.py  __init__.py
apify/: .env.example  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  __init__.py  base.py  client.py  exceptions.py  pyproject.toml  requirements.txt  setup.py
apify/examples/: 01_basic_usage.py  02_error_handling.py  03_pagination.py  04_debug_mode.py  05_advanced_usage.py  README.md
fidoo/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  client.py  exceptions.py  pyproject.toml  requirements.txt  setup.py
fidoo/examples/: README.md  advanced_usage.py  basic_usage.py  create_and_update.py  error_handling.py  list_all_users.py  list_users.py  pagination.py  pagination_large_dataset.py  write_operations.py
mpohoda/: .editorconfig  .env.example  .gitignore  INSTALL.md  MANIFEST.in  README.md  __init__.py  base.py  client.py  exceptions.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
mpohoda/examples/: README.md  advanced_usage.py  basic_usage.py  error_handling.py  pagination.py  write_operations.py
odoo/: .env.example  .gitignore  README.md  __init__.py  base.py  client.py  exceptions.py  pyproject.toml  requirements.txt
odoo/examples/: 01_list_all_partners.py  02_create_and_update_partner.py  03_batch_operations.py  04_field_discovery.py  05_pagination_large_dataset.py  06_error_handling.py  __init__.py
posthog/: .env.example  .gitignore  MANIFEST.in  README.md  __init__.py  base.py  client.py  exceptions.py  pyproject.toml  requirements.txt  setup.py
posthog/examples/: README.md  advanced_usage.py  basic_usage.py  error_handling.py  pagination.py  write_operations.py
stripe/: .env.example  .gitignore  README.md  __init__.py  base.py  client.py  exceptions.py  pyproject.toml  setup.py
stripe/examples/: 01_basic_usage.py  02_error_handling.py  03_pagination.py  04_write_operations.py  05_advanced_usage.py  __init__.py
