[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "posthog-driver"
version = "1.0.0"
description = "Production-ready Python driver for the PostHog API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PostHog", email = "support@posthog.com"},
]
maintainers = [
    {name = "PostHog", email = "support@posthog.com"},
]
keywords = [
    "posthog",
    "api",
    "analytics",
    "client",
    "driver",
    "python",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "requests>=2.28.0,<3.0.0",
    "urllib3>=1.26.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=22.0.0,<23.0.0",
    "flake8>=4.0.0,<5.0.0",
    "mypy>=0.990,<1.0.0",
    "isort>=5.10.0,<6.0.0",
    "pylint>=2.14.0,<3.0.0",
]

testing = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "responses>=0.20.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/PostHog/posthog-driver-python"
Documentation = "https://posthog.com/docs/api"
Repository = "https://github.com/PostHog/posthog-driver-python.git"
"Bug Tracker" = "https://github.com/PostHog/posthog-driver-python/issues"

[tool.setuptools]
packages = ["posthog_driver"]

[tool.setuptools.package-data]
posthog_driver = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]
known_first_party = ["posthog_driver"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=posthog_driver --cov-report=term-missing"

[tool.coverage.run]
source = ["posthog_driver"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
